Gemini Phase I Schema Changes

# Version 2018.2.1 - 2018B
##########################

* Added OVI and OVIC filters for GMOS-N and GMOS-S. (REL-3273)

# Version 2018.1.1 - 2018A
##########################

* Hidden filter Y and J-lo for Flamingos2
* Added Subaru Intensive Program proposal class
* Renamed CFHT references to CFH

# Version 2017.2.1 - 2017B
##########################

* Formerly, the time field in Observation referred to program time.
  As per REL-2926, we are now dividing time into multiple categories to include calculated calibration overheads.
  This has resulted in a number of new fields in Observation, namely progTime, partTime, and time, where
  partTime is a function of progTime as per the new Overheads class, and time is the sum of these
  and represents total time.
* Texes is not available this semester.
* Two new filters available for F2: 'K-blue (2.06 um)' and 'K-red (2.31 um)'.
* Altair LGS is disabled for this semester due to the GN laser not working.

# Version 2017.1.1 - 2017A
##########################

* Added an overrideAffiliate flag to Meta to allow discrepancy between PI institution affiliate and chosen affiliate.
  Set to default "true", as if PI institution affiliate and chosen affiliate are the same, it resets to false.

# Version 2016.2.2 - 2016B
##########################

* FT proposals can have as PI Affiliation an NGO partner or an Exchange Partner

# Version 2016.2.1 - 2016B
##########################

* Rename Flamingos-2 K-long from 'K-long (2.20 um)' to 'K-long (2.00um)'
* Add site to DSSI
* Add site to Phoenix
* Add site to Texes
* Added Unblocked modes to GPI

# Version 2016.1.1 - 2016A
##########################

* Offer Flamingos-2 K-long filter
* Added keyword 'Star formation'
* Offer Phoenix instrument
* Added SDSS Magnitude Bands u, g, r, i, z
* Removed NIRI filters J-cont (1.065 um), J-continuum (1.122 um)

# Version 2015.2.1 - 2015B
##########################

* Offer GRACES as a blueprint option