@@ -8,7 +8,7 @@ class Root(sem:Semester) extends SingleSelectNode[Semester, Instrument, Any](sem
   var title = "Select Instrument"
   var description = s"The following instruments are available for semester ${sem.year}${sem.half}. See the Gemini website for information on instrument capabilities and configuration options."
 
-  def choices = List(Flamingos2, Dssi, GmosNorth, GmosSouth, Gnirs, Gpi, Graces, Gsaoi, Nifs, Niri, Texes, Visitor)
+  def choices = List(Flamingos2, Dssi, GmosNorth, GmosSouth, Gnirs, Gpi, Graces, Gsaoi, Nifs, Niri, Texes, Visitor, ʻAlopeke)
 
   def apply(i:Instrument) = i match {
     case Flamingos2 => Left(inst.Flamingos2())
@@ -27,6 +27,7 @@ class Root(sem:Semester) extends SingleSelectNode[Semester, Instrument, Any](sem
     case Texes      => Left(inst.Texes())
     case Trecs      => Left(inst.Trecs())
     case Visitor    => Left(inst.Visitor())
+    case ʻAlopeke   => Left(inst.ʻAlopeke())
   }
 
   def unapply = {
