@@ -24,6 +24,7 @@
     <xsd:include schemaLocation="Meta.xsd"/>
     <xsd:include schemaLocation="ProposalClass.xsd"/>
     <xsd:include schemaLocation="Observation.xsd"/>
+    <xsd:include schemaLocation="ʻAlopeke.xsd"/>
 
     <xsd:element name="proposal">
         <xsd:complexType>
@@ -133,6 +134,7 @@
             <xsd:element name="texes"      type="TexesBlueprintChoice"/>
             <xsd:element name="trecs"      type="TrecsBlueprintChoice"/>
             <xsd:element name="visitor"    type="VisitorBlueprintChoice"/>
+            <xsd:element name="ʻalopeke"   type="ʻAlopekeBlueprintChoice"/>
         </xsd:choice>
     </xsd:complexType>
 
